--- a/styles.css
+++ b/styles.css
@@ -5,35 +5,79 @@ body {
 }
 
 header {
-  width: 95%;
-  margin: 0 auto;
+  width: 100%;
   padding: 1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   position: absolute;
+  box-sizing: border-box;
 }
 
 header a {
-  font-family: "Zen Dots", cursive;
+  font-family: var(--font-family1);
   font-size: 2rem;
   text-underline-offset: 5px;
   color: #ffd1ff;
-  text-shadow: 3px 3px 0 var(--base-color1), -1px -1px 0 var(--base-color1),
-    1px -1px 0 var(--base-color1), -1px 1px 0 var(--base-color1),
-    1px 1px 0 var(--base-color1);
+  text-shadow: 2px 2px 3px var(--base-color1);
 }
 
 .menu-icon {
   filter: invert(97%) sepia(45%) saturate(4491%) hue-rotate(198deg)
-    brightness(104%) contrast(106%) drop-shadow(3px 5px 2px rgb(0 0 0 / 0.7));
+    brightness(104%) contrast(106%) drop-shadow(3px 5px 2px var(--base-color1));
 }
 
 .hero {
-  background: url("https://img.freepik.com/free-vector/perspective-japanese-street-neon-lights_52683-44988.jpg?w=1060&t=st=1671215645~exp=1671216245~hmac=7c75e82adbcdce6d4f67d7ccc2c8d1cd349b03d292cefa57e4a29c48322a17b4")
+  background: url("https://img.freepik.com/free-vector/japanese-street-pastel-colours_52683-44714.jpg?w=1800&t=st=1671220459~exp=1671221059~hmac=a6e1927fef5a5c2a73f5fbe76043b8fa1a5e24e080af33307e2e94b348e964aa")
     center center no-repeat;
   background-size: cover;
   height: 100vh;
   width: 100%;
-  padding: var(--spacing-xl);
+  padding: var(--spacing-xxl) 0;
+}
+
+.hero-content {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.hero-child {
+  width: 50%;
+}
+
+.heading {
+  background-color: rgb(128, 90, 244, 0.27);
+  border-radius: 30px;
+}
+
+.heading h1 {
+  font-family: var(--font-family2);
+  font-weight: 600;
+  font-size: min(20vw, 80px);
+  line-height: 1.2;
+  color: #ffd1ff;
+  text-shadow: 2px 2px 3px var(--base-color1);
+  margin-bottom: var(--spacing-lg);
+}
+
+.heading a {
+  border: 2px solid #ffd1ff;
+  border-radius: 30px;
+  padding: 0.5rem 1rem;
+  background-color: var(--base-color2);
+  color: #ffd1ff;
+  text-shadow: 2px 2px 3px var(--base-color1);
+  text-decoration: none;
+}
+
+.slide-show img {
+  max-width: 300px;
+}
+
+.slide-show h2 {
+  font-family: var(--font-family2);
+  font-weight: 600;
+  color: var(--base-color2);
 }
