--- a/defaults.css
+++ b/defaults.css
@@ -143,7 +143,7 @@ table {
   --base-color1: #382953;
   --base-color2: #805af4;
   --base-color3: #ffd1ff;
-  --base-color4: #ffffff;
+  --base-color4: #c8b6ee;
   --font-family1: "Zen Dots", cursive;
   --font-family2: "Montserrat Alternates", cursive;
 }
