add base colors

--- a/defaults.css
+++ b/defaults.css
@@ -144,6 +144,7 @@ table {
   --base-color2: #805af4;
   --base-color3: #ffd1ff;
   --base-color4: #c8b6ee;
+  --base-color5: #12004f;
   --font-family1: "Zen Dots", cursive;
   --font-family2: "Montserrat Alternates", cursive;
 }
