--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,18 @@ body {
 
 header {
   width: 100%;
-  padding: 2rem 3rem;
+  padding: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   position: absolute;
   box-sizing: border-box;
+  align-items: flex-start;
 }
 
 header a {
   font-family: var(--font-family1);
-  font-size: 2rem;
+  font-size: var(--font-size-small);
   text-underline-offset: 5px;
   color: #ffd1ff;
   text-shadow: 2px 2px 3px var(--base-color1);
@@ -27,6 +28,7 @@ header a {
 .menu-icon {
   filter: invert(97%) sepia(45%) saturate(4491%) hue-rotate(198deg)
     brightness(104%) contrast(106%) drop-shadow(3px 5px 2px var(--base-color1));
+  width: 2rem;
 }
 
 /* hero section */
@@ -35,29 +37,37 @@ header a {
   background: url("https://img.freepik.com/free-vector/japanese-street-pastel-colours_52683-44714.jpg?w=1800&t=st=1671238941~exp=1671239541~hmac=f440cac647c7f3dcb8fad509ff82627fff4ae25afb162780eb727a25b90f482a")
     center center no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: fit-content;
   width: 100%;
-  padding: var(--spacing-xxl) 0;
+  padding: var(--spacing-xl) 0;
 }
 
 .hero-content {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   width: 80%;
-  margin: var(--spacing-lg) auto;
+  margin: var(--spacing-small) auto;
+}
+
+.heading {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .heading h1 {
-  width: 60%;
   font-family: var(--font-family2);
   font-weight: 600;
-  font-size: min(15vw, 110px);
+  font-size: min(15vw, 80px);
   line-height: 1.2;
   color: #ffd1ff;
   background-color: rgb(128, 90, 244, 0.27);
   border-radius: 30px;
   text-shadow: 2px 2px 3px var(--base-color1);
-  margin-bottom: var(--spacing-lg);
+  margin-bottom: var(--spacing-small);
   padding: var(--spacing-small);
 }
 
@@ -65,7 +75,7 @@ header a {
   border: 2px solid #ffd1ff;
   border-radius: 30px;
   padding: 1rem 1.3rem;
-  font-size: min(2vw, 30px);
+  font-size: min(4vw, 20px);
   background-color: var(--base-color2);
   color: #ffd1ff;
   text-shadow: 2px 2px 3px var(--base-color1);
@@ -73,14 +83,15 @@ header a {
 }
 
 .slide-show {
-  width: 40%;
   text-align: center;
-  margin-right: var(--spacing-small);
+  margin-top: var(--spacing-small);
+  display: flex;
+  flex-direction: row;
 }
 
 .slide-show img {
-  max-width: 400px;
-  max-height: 500px;
+  max-width: 35vw;
+  max-height: 35vh;
   border: rgb(128, 90, 244, 0.8) 2px solid;
 }
 .slide-show h2 {
@@ -92,25 +103,24 @@ header a {
   background-color: rgb(128, 90, 244, 0.8);
   border-radius: 15px;
   line-height: 1.5;
-  margin-top: var(--spacing-md);
-  padding: var(--spacing-small);
+  margin-left: var(--spacing-small);
+  padding: var(--spacing-xsmall);
 }
 
 /* top anime of different genre */
 
 #randomize {
   background-color: var(--base-color2);
-  padding: 2rem;
+  padding: var(--spacing-xsmall);
 }
 
 .genre-container {
-  max-width: 60%;
-  margin: 2rem auto;
+  margin-top: var(--spacing-small);
 }
 
 .genre-header {
   color: var(--base-color3);
-  font-size: var(--font-size-small);
+  font-size: min(4vw, var(--font-size-small));
   font-weight: bold;
   margin-bottom: 1rem;
 }
@@ -188,4 +198,155 @@ footer {
 
 .ack {
   margin-top: 1rem;
+}
+
+/* Desktop media queries */
+
+@media (min-width: 1025px) {
+  header {
+    padding: 2rem 3rem;
+  }
+
+  header a {
+    font-size: 2rem;
+  }
+
+  .menu-icon {
+    width: 3rem;
+  }
+
+  /* hero section */
+
+  .hero {
+    padding: var(--spacing-xxl) 0;
+  }
+
+  .hero-content {
+    display: flex;
+    flex-direction: row;
+    margin: var(--spacing-lg) auto;
+  }
+
+  .heading {
+    width: 60%;
+    margin-right: 2rem;
+    align-items: flex-start;
+  }
+
+  .heading h1 {
+    width: 80%;
+    font-size: min(7vw, 115px);
+    margin-bottom: var(--spacing-lg);
+  }
+
+  .slide-show {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .slide-show img {
+    max-height: 60vh;
+  }
+  .slide-show h2 {
+    font-size: min(3vw, 17px);
+    margin-top: var(--spacing-small);
+    margin-left: 0;
+    padding: var(--spacing-small);
+    width: 80%;
+  }
+
+  /* top anime of different genre */
+
+  #randomize {
+    padding: 2rem;
+  }
+
+  .genre-container {
+    max-width: 60%;
+    margin: 2rem auto;
+  }
+
+  .genre-header {
+    color: var(--base-color3);
+    font-size: var(--font-size-small);
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+
+  .genre-contents {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .anime-container {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    padding: 1rem;
+    text-align: center;
+    align-items: center;
+  }
+
+  .anime-container img {
+    max-width: 200px;
+    max-height: 30vh;
+  }
+
+  .anime-container h4 {
+    font-weight: bold;
+    color: var(--base-color5);
+    width: 60%;
+    margin-top: 1rem;
+  }
+
+  /* footer */
+
+  footer {
+    background-color: var(--base-color4);
+  }
+
+  .footer-contents {
+    max-width: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 3rem auto;
+  }
+
+  .site-description {
+    width: 33%;
+    line-height: 1.7;
+  }
+
+  .site-description p {
+    width: 70%;
+  }
+
+  .quik-links {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    line-height: 1.7;
+  }
+
+  .socials {
+    width: 33%;
+  }
+
+  .socials img {
+    width: 30px;
+    filter: invert(12%) sepia(20%) saturate(5404%) hue-rotate(247deg)
+      brightness(81%) contrast(118%);
+    margin: 0 0.5rem;
+  }
+
+  .ack {
+    margin-top: 1rem;
+  }
 }
